css/styles.css
* {
    padding: 0;
    margin: 0;
    font-family: 'Poppins', sans-serif;
    
}

body {
    cursor: url(''), auto;
    background-color: #B62334;
}

footer {
    background-color: rgb(255, 255, 255);
    text-align: center;
    color: #B62334;
}

h1 {
    color: #B62334;
    font-size: 6em;
}


p {
    font-size: 1 em;
}

._pitalic{
    font-style: italic;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
}

._logonav {
    padding-left: 0.2em;
    padding-bottom: 0em;
    margin-bottom: -0.9em;
    font-size: 1.5em;
}

.card>h2 {
    font-family: 'Poppins', sans-serif;
    font-weight: 800;
    font-size: 10em;
    color: #C78C42;
}

.card>h1 {
    font-family: 'Alegreya', serif;
    font-style: italic;
    font-size: 8em;
    color: black;
}

.btn {
    text-decoration: none;
    padding: 0.2em;
    margin: 0em;
    text-align: end;
}

.btn>h5 {
    font-family: 'Poppins', sans-serif;
    font-weight: 700;
    font-size: 1em;
    color: rgba(21, 21, 21, 1);
    

}

#velas>img {
    width: 100%;
}

.font_h1 {
    font-family: 'Alegreya', serif;
    font-style: italic;
    color: #B62334;
    font-style: bold;
    text-align: end;
}
.font_h1_norm {
    font-family: 'Alegreya', serif;
    font-style: italic;
    color: #B62334;
    font-style: bold;
    
}

.font_h2 {
    font-family: 'Alegreya', serif;
    font-style: italic;
    text-align: end;
    font-size: 3em;
    color: #B62334;
    font-style: bold;
}

.btn {
    background-color: white;
    
    color: #C78C42;
    border-radius: 0%;
    font-weight: 800;
    font-size: 1.5em;
}
/* villain zone */
._imgrayitos {
    width: 30%;
}

._imgvillain{
    width: 100vw;
}
._containerstrokesvillain {
    padding-top: 14em;

}
._containerstrokesvillain2{
    margin-right: -6em;
    margin-left: -6em;
}
._stroke1{
    width: 170%;
    margin-left: -6em;
    
}
._villainpic {
    margin-top: -6em;

}

/* marquee */
.marquee {
    position: relative;
    width: 100vw;
    max-width: 100%;
    height: 190px;
    overflow-x: hidden;
}
  
.track {
    height: 100%;
    position: absolute;
    white-space: nowrap;
    will-change: transform;
    animation: marquee 10s linear infinite;
}

.content {
    height: 100%;
}

.content img{
    height: auto;
    width: 12%;
    padding: 1em;
}

@keyframes marquee {
    from { transform: translateX(0); }
    to { transform: translateX(-100%); }
}

@keyframes queemar{
    from { transform: translateX(-100%); }
    to { transform: translateX(0); }
}


._zoomimg {
    transition: transform 0.3s ease-in-out;
}

._zoomimg:hover {
    transform: scale(1.05);
}

